@@ -19,7 +19,7 @@ end;
 
 interface
 
-uses xxm, Contnrs, ADODB_TLB;
+uses xxm, Classes, ADODB_TLB;
 
 type
   TXxmSession=class(TObject)
@@ -28,7 +28,7 @@ type
   public
 
     //TODO: full properties?
-	Connection:Connection;
+    Connection:Connection;
 
     constructor Create(Context: IXxmContext);
     destructor Destroy; override;
@@ -45,35 +45,39 @@ implementation
 
 uses Windows, SysUtils, xxmData;
 
-//TODO: something better than plain objectlist
 var
-  SessionStore:TObjectList;
+  SessionStore:TStringList;
 
 procedure SetSession(Context: IXxmContext);
 var
   i:integer;
   sid:WideString;
 begin
-  if SessionStore=nil then SessionStore:=TObjectList.Create(true);
+  if SessionStore=nil then
+   begin
+    SessionStore:=TStringList.Create;
+    SessionStore.Sorted:=true;
+    SessionStore.CaseSensitive:=true;
+    //SessionStore.Duplicates:=dupError;
+   end;
   sid:=Context.SessionID;
-  i:=0;
-  while (i<SessionStore.Count) and not(TXxmSession(SessionStore[i]).SessionID=sid) do inc(i);
+  i:=SessionStore.IndexOf(sid);
   //TODO: session expiry!!!
-  if (i<SessionStore.Count) then Session:=TXxmSession(SessionStore[i]) else
+  if (i<>-1) then Session:=SessionStore.Objects[i] as TXxmSession else
    begin
     //as a security measure, disallow  new sessions on a first POST request
     if Context.ContextString(csVerb)='POST' then
       raise Exception.Create('Access denied.');
     Session:=TXxmSession.Create(Context);
-    SessionStore.Add(Session);
+    SessionStore.AddObject(sid,Session);
    end;
 end;
 
 //call AbandonSession to release session data (e.g. logoff)
 procedure AbandonSession;
 begin
-  SessionStore.Remove(Session);
-  Session:=nil;
+  SessionStore.Delete(SessionStore.IndexOf(Session.SessionID));
+  FreeAndNil(Session);
 end;
 
 { TxxmSession }
